Colaboratory를 통해 생성됨

--- a/과제_0313_분류_캐글.ipynb
+++ b/과제_0313_분류_캐글.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFX5/OIJEy3cQ0cM6Vi4Dl",
+      "authorship_tag": "ABX9TyNWwuqxOHzBtFBYQiesoAt7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3752,7 +3752,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# I found the best random_stete value is five. Now I will find the best n_estimators parameter.\n",
+        "# I found the best random_state value is five. Now I will find the best n_estimators parameter.\n",
         "test_score_list = []\n",
         "train_score_list = []\n",
         "\n",
