Colaboratory를 통해 생성됨

--- a/0407_텍스트_분석_연습문제.ipynb
+++ b/0407_텍스트_분석_연습문제.ipynb
@@ -528,6 +528,66 @@
     {
       "cell_type": "code",
       "source": [
+        "lem.lemmatize('believes', pos='a')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "9tx-kictLL6h",
+        "outputId": "56bd587b-14c0-454c-894c-83ca89f66283"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'believes'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lem.lemmatize('believes', pos='v')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "iGgEL_7rLOo_",
+        "outputId": "0ec23911-f4f4-425c-e712-7767a1d832b3"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'believe'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#lemmatize 'believes', 'happiness'\n",
         "lem.lemmatize('happiness')"
       ],
@@ -553,6 +613,66 @@
           },
           "metadata": {},
           "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lem.lemmatize('happiness', pos='a')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "5SP4NTsrLiKc",
+        "outputId": "7171c62f-5913-4f2f-eba7-e01fd4d5e834"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'happiness'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lem.lemmatize('happiness', pos='v')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "tS6FYtWXLk_t",
+        "outputId": "8371f2eb-d419-46be-e80f-ee51576c2956"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'happiness'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 28
         }
       ]
     }
